added plant info form and show/hide buttons

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <h1>Garden Planner</h1>
-    <div ng-view></div>
+    <div class="container" ng-view></div>
   </body>
 </html>
