basic drag and drop functionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-resource/angular-resource.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 
 
     <!-- ANGULAR -->
