--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-resource/angular-resource.min.js"></script>
+    <script src="libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
-
 
     <!-- ANGULAR -->
     <script src="js/app.js"></script>
@@ -21,7 +21,9 @@
     <script src="js/directives/directives.js"></script>
   </head>
   <body>
-    <h1>Garden Planner</h1>
+    <header>
+      <h1>Garden Planner</h1>
+    </header>
     <div class="container" ng-view></div>
   </body>
 </html>
