npm install mongo. changed styles

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <h1>Garden Planner</h1>
+      <h1>Green Thumb Garden Designer</h1>
     </header>
     <div class="container" ng-view></div>
   </body>
