added confirm clear button, need to fix bootstrap modal

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-resource/angular-resource.min.js"></script>
     <script src="libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="libs/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="libs/jquery-ui/jquery-ui.min.js"></script>
 
     <!-- ANGULAR -->
